add: class and student new api
