# docs/swagger.json
@@ -131,6 +131,60 @@
             }
         },
         "/api/v1/classes/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "通过id获取",
+                "tags": [
+                    "classes"
+                ],
+                "summary": "获取一条class",
+                "operationId": "get class one",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/schema.ClassResp"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "put": {
                 "security": [
                     {
@@ -153,6 +207,48 @@
                             "$ref": "#/definitions/schema.ClassUpForm"
                         }
                     },
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "通过id删除",
+                "tags": [
+                    "classes"
+                ],
+                "summary": "删除class",
+                "operationId": "delete class",
+                "parameters": [
                     {
                         "type": "integer",
                         "description": "id",
@@ -422,6 +518,48 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "通过id删除记录",
+                "tags": [
+                    "students"
+                ],
+                "summary": "删除记录",
+                "operationId": "student delete one",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         }
     },
@@ -477,7 +615,7 @@
                 },
                 "createdAt": {
                     "description": "创建时间",
-                    "$ref": "#/definitions/utils.JSONTime"
+                    "type": "string"
                 },
                 "id": {
                     "description": "id",
@@ -489,7 +627,7 @@
                 },
                 "updatedAt": {
                     "description": "更新时间",
-                    "$ref": "#/definitions/utils.JSONTime"
+                    "type": "string"
                 }
             }
         },
@@ -556,7 +694,7 @@
                 },
                 "createdAt": {
                     "description": "创建时间",
-                    "$ref": "#/definitions/utils.JSONTime"
+                    "type": "string"
                 },
                 "id": {
                     "description": "ID",
@@ -572,7 +710,7 @@
                 },
                 "updatedAt": {
                     "description": "更新时间",
-                    "$ref": "#/definitions/utils.JSONTime"
+                    "type": "string"
                 },
                 "uuid": {
                     "description": "Uuid",
@@ -604,14 +742,6 @@
                 },
                 "pagination": {
                     "$ref": "#/definitions/schema.Pagination"
-                }
-            }
-        },
-        "utils.JSONTime": {
-            "type": "object",
-            "properties": {
-                "time.Time": {
-                    "type": "string"
                 }
             }
         }
